--- a/poem.html
+++ b/poem.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="christina Maayah" />
+<meta name="author" content="Math_116" />
 
 
 <title>git_01</title>
@@ -372,8 +372,8 @@ summary {
 
 
 <h1 class="title toc-ignore">git_01</h1>
-<h4 class="author">christina Maayah</h4>
-<h4 class="date">september 2020</h4>
+<h4 class="author">Math_116</h4>
+<h4 class="date">Fall semester</h4>
 
 </div>
 
@@ -385,15 +385,15 @@ you, if you change any of this the git program will notice it and compromise you
 <div id="first-verse" class="section level2">
 <h2>First Verse</h2>
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-<p>’Tis the voice of the Lobster, I heard him declare<br />
-“You have baked me too brown: I must sugar my hair.”<br />
-As a duck with its eyelids, so he with his nose<br />
-Trims his belt &amp; his buttons, &amp; turns out his toes.</p>
-<p>When the sands are all dry, he is gay as a lark,</p>
 </div>
 <div id="second-verse" class="section level2">
 <h2>Second Verse</h2>
 <!--Put the first five lines of a poem by Robert Frost here!-->
+<p>Before man came to blow it right<br />
+The wind once blew itself untaught,<br />
+And did its loudest day and night<br />
+In any rough place where it caught.</p>
+<p>Man came to tell it what was wrong:</p>
 </div>
 <div id="third-verse" class="section level2">
 <h2>Third Verse</h2>
